# BinaryIO

./: CMakeLists.txt
include/binary_io/: array.hpp  binary.hpp  bitfield.hpp  child.hpp  element.hpp  float.hpp  integer.hpp  reader.hpp  structure.hpp  value.hpp  writer.hpp
test/: array.cpp  binary.cpp  bitfield.cpp  child.cpp  float.cpp  integer.cpp  key.h  padding.cpp  structure.cpp
